--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Daniel <span class="accent">Lahlafi</span></h1>
             <ul>
                 <li><a class="button" href="#">Home</a></li>
-                <li><a class="button" onclick="typeWriter()" href="#">About Me</a></li>
+                <li><a class="button" onclick="typeWriter()" href="#about-description">About Me</a></li>
                 <li><a class="button" href="https://github.com/daniel-lahlafi">Projects</a></li>
             </ul>
         </header>
