--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </script>
     </head>
 
-    <body>
+    <body class="puff-in-center">
         <div id="particles"></div>
         <header>
             <h1>Daniel <span class="accent">Lahlafi</span></h1>
@@ -28,26 +28,19 @@
         <main>
             <div class="columns">
                 <div class="cols-small">
-                    <img src="img/daniel-profile.jpg" alt="Daniel Lahlafi">
+                    <img class="slide-in-left" src="img/daniel-profile.jpg" alt="Daniel Lahlafi">
                 </div>
-                <div class="cols-large home-page-info">
+                <div class="cols-large home-page-info" >
                     <p class="banner">Second Year <span class="accent">Computer Science Student</span> studying at <span class="accent">UCL</span></p>
-                    <br>
-                    <div class="scroll-down">
-                        <svg width="91" height="40" viewBox="0 0 91 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 1L46.5 39L90 1" stroke="black"/>
-                        </svg>
-
-                        <p>Scroll Down to see why I'm great!</p>
-                            
+                    <div class="columns">
+                        <a style="width: 50%; display: inline-block" class="button" href="https://docs.google.com/document/d/1AtZN2-3fDSdrf7z_ZpQvlwRZQEFeV3tHfWyV3FY-Bfk/edit?usp=sharing" >CV/Resume</a>
+                        <p style="margin: 1em; width: 50%; display: inline-block" class="scroll-down">OR scroll down to see why I'm great!</p>
                     </div>
                 </div>
             </div>
-
-            <br>
         </main>
 
-        <div class="about-me">
+        <div class="about-me" style="margin: 0">
             <h2>Technologies I've learned</h2>
             <div class="columns">
                 <div class="logo">
@@ -91,8 +84,11 @@
                     <p>Haskell</p>
                 </div>
             </div>
-            <div id="find-out-more-btn" style="text-align: center"><a class="button" onclick="typeWriter()" >Press me to find out more!</a></div>
+            <div id="find-out-more-btn" style="text-align: center"><a class="button" onclick="typeWriter()" href="#" >Press me to find out more!</a></div>
             <p id="about-description"></p>
+            <div id="outer-progress-bar">
+                <div id="inner-progress-bar"></div>
+            </div>
             <div id="skip-btn" style="text-align: center"><a class="button" onclick="speedUp()" >Skip to the end</a></div>
         </div>
     </body>
